--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.1
   cloud_firestore: ^2.5.2
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
